third_party/flutter_litert/src/tensorflow_lite/operator.h

/// TfLiteOperator is an opaque version of TfLiteRegistration,
/// and is used for registering custom ops.  It represents a definition of a
/// custom op or a builtin op.
///
/// \warning This is an experimental type and subject to change.
typedef struct TfLiteOperator TfLiteOperator;
/// Sets the deallocation callback for the registration.
///
/// This callback is called to deallocate the data returned by the init
/// callback. The value passed in the `data` parameter is the value that was
/// returned by the `init` callback. Please refer `free` of `TfLiteRegistration`
/// for the detail.
///
/// Deprecated: Use `TfLiteOperatorSetFreeWithData`
TFL_CAPI_EXPORT extern void TfLiteOperatorSetFree(
    TfLiteOperator* registration,
    void (*free)(TfLiteOpaqueContext* context, void* data));
/// Sets the deallocation callback for the registration, similarly to
/// `TfLiteOperatorSetFree`. The function returns an error upon failure.
///
/// This callback is called to deallocate the data returned by the init
/// callback. The value passed in the `data` parameter is the value that was
/// returned by the `init` callback. The value passed in the `user_data`
/// parameter is the value that was passed to `TfLiteOperatorCreate`.
/// Please refer `free` of `TfLiteRegistration` for the detail.
///
TFL_CAPI_EXPORT extern TfLiteStatus TfLiteOperatorSetFreeWithData(
    TfLiteOperator* registration,
    void (*free)(void* user_data, TfLiteOpaqueContext* context, void* data));
/// Sets the async kernel accessor callback for the registration. The function
/// returns an error upon failure.
///
/// The callback is called to retrieve the async kernel if the delegate supports
/// it. If the delegate does not support async execution, either this function
/// should not be called, or `async_kernel` needs to be nullptr.  `node` is the
/// delegate TfLiteNode created by `ModifyGraphWithDelegate`.  The value passed
/// in the `user_data` parameter is the value that was passed to
/// `TfLiteOperatorCreate`.  Please refer `async_kernel` of `TfLiteRegistration`
/// for the detail.
///
/// \warning This is an experimental API and subject to change.
TFL_CAPI_EXPORT extern TfLiteStatus TfLiteOperatorSetAsyncKernelWithData(
    TfLiteOperator* registration,
    struct TfLiteAsyncKernel* (*async_kernel)(void* user_data,
                                              TfLiteOpaqueContext* context,
                                              TfLiteOpaqueNode* node));
/// Sets the inplace_operator field of the external registration.
///
/// This is a bitmask. Please refer to `inplace_operator` field of
/// `TfLiteRegistration` for details.
///
TFL_CAPI_EXPORT extern void TfLiteOperatorSetInplaceOperator(
    TfLiteOperator* registration, uint64_t inplace_operator);