third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  late final _TfLiteOperatorSetAsyncKernelWithDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Pointer<TfLiteAsyncKernel> Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<TfLiteOpaqueNode> node,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetAsyncKernelWithData');
  late final _TfLiteOperatorSetAsyncKernelWithData =
      _TfLiteOperatorSetAsyncKernelWithDataPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Pointer<TfLiteAsyncKernel> Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<TfLiteOpaqueNode> node,
              )
            >
          >,
        )
      >();

  /// Sets the inplace_operator field of the external registration.
  ///
  /// This is a bitmask. Please refer to `inplace_operator` field of
  /// `TfLiteRegistration` for details.
  void TfLiteOperatorSetInplaceOperator(
    ffi.Pointer<TfLiteOperator> registration,
    int inplace_operator,
  ) {
    return _TfLiteOperatorSetInplaceOperator(registration, inplace_operator);
  }

  late final _TfLiteOperatorSetInplaceOperatorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<TfLiteOperator>, ffi.Uint64)
        >
      >('TfLiteOperatorSetInplaceOperator');
  late final _TfLiteOperatorSetInplaceOperator =
      _TfLiteOperatorSetInplaceOperatorPtr.asFunction<
        void Function(ffi.Pointer<TfLiteOperator>, int)
      >();

  /// --------------------------------------------------------------------------
  /// The TensorFlow Lite Runtime version.
  ///
  /// Returns a pointer to a statically allocated string that is the version
  /// number of the (potentially dynamically loaded) TF Lite Runtime library.
  /// TensorFlow Lite uses semantic versioning, and the return value should be
  /// in semver 2 format <http://semver.org>, starting with MAJOR.MINOR.PATCH,
  /// e.g. "2.12.0" or "2.13.0-rc2".
  ffi.Pointer<ffi.Char> TfLiteVersion() {
    return _TfLiteVersion();
  }

  late final _TfLiteVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'TfLiteVersion',
      );
  late final _TfLiteVersion =
      _TfLiteVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// --------------------------------------------------------------------------
  /// The TensorFlow Lite Extension APIs version.
  ///
  /// Returns a pointer to a statically allocated string that is the version
  /// number of the TF Lite Extension APIs supported by the (potentially
  /// dynamically loaded) TF Lite Runtime library.  The TF Lite "Extension APIs"
  /// are the APIs for extending TF Lite with custom ops and delegates.
  /// More specifically, this version number covers the (non-experimental)
  /// functionality documented in the following header files:
  ///
  /// * lite/c/c_api_opaque.h
  /// * lite/c/common.h
  /// * lite/c/builtin_op_data.h
  /// * lite/builtin_ops.h
  ///
  /// This version number uses semantic versioning, and the return value should
  /// be in semver 2 format <http://semver.org>, starting with MAJOR.MINOR.PATCH,
  /// e.g. "2.14.0" or "2.15.0-rc2".
  ffi.Pointer<ffi.Char> TfLiteExtensionApisVersion() {
    return _TfLiteExtensionApisVersion();
  }

  late final _TfLiteExtensionApisVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'TfLiteExtensionApisVersion',
      );
  late final _TfLiteExtensionApisVersion =
      _TfLiteExtensionApisVersionPtr.asFunction<
        ffi.Pointer<ffi.Char> Function()
      >();

  /// The supported TensorFlow Lite model file Schema version.
  ///
  /// Returns the (major) version number of the Schema used for model
  /// files that is supported by the (potentially dynamically loaded)
  /// TensorFlow Lite Runtime.
  ///
  /// Model files using schema versions different to this may not be supported by
  /// the current version of the TF Lite Runtime.
  int TfLiteSchemaVersion() {
    return _TfLiteSchemaVersion();
  }

  late final _TfLiteSchemaVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('TfLiteSchemaVersion');
  late final _TfLiteSchemaVersion =
      _TfLiteSchemaVersionPtr.asFunction<int Function()>();

  /// Returns a model from the provided buffer, or null on failure.
  ///
  /// \note The caller retains ownership of the `model_data` buffer and should
  /// ensure that the lifetime of the `model_data` buffer must be at least as long
  /// as the lifetime of the `TfLiteModel` and of any `TfLiteInterpreter` objects
  /// created from that `TfLiteModel`, and furthermore the contents of the
  /// `model_data` buffer must not be modified during that time."
  ffi.Pointer<TfLiteModel> TfLiteModelCreate(
    ffi.Pointer<ffi.Void> model_data,
    int model_size,
  ) {
    return _TfLiteModelCreate(model_data, model_size);
  }

  late final _TfLiteModelCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteModel> Function(ffi.Pointer<ffi.Void>, ffi.Size)
        >
      >('TfLiteModelCreate');
  late final _TfLiteModelCreate =
      _TfLiteModelCreatePtr.asFunction<
        ffi.Pointer<TfLiteModel> Function(ffi.Pointer<ffi.Void>, int)
      >();

  /// Same as `TfLiteModelCreate` with customizble error reporter.
  /// * `reporter` takes the provided `user_data` object, as well as a C-style
  /// format string and arg list (see also vprintf).
  /// * `user_data` is optional. If non-null, it is owned by the client and must
  /// remain valid for the duration of the interpreter lifetime.
  ffi.Pointer<TfLiteModel> TfLiteModelCreateWithErrorReporter(
    ffi.Pointer<ffi.Void> model_data,
    int model_size,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<ffi.Char> format,
          va_list args,
        )
      >
    >
    reporter,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _TfLiteModelCreateWithErrorReporter(
      model_data,
      model_size,
      reporter,
      user_data,
    );
  }

  late final _TfLiteModelCreateWithErrorReporterPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteModel> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Size,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Void Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<ffi.Char> format,
                  va_list args,
                )
              >
            >,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('TfLiteModelCreateWithErrorReporter');
  late final _TfLiteModelCreateWithErrorReporter =
      _TfLiteModelCreateWithErrorReporterPtr.asFunction<
        ffi.Pointer<TfLiteModel> Function(
          ffi.Pointer<ffi.Void>,
          int,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Void Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<ffi.Char> format,
                va_list args,
              )
            >
          >,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Returns a model from the provided file, or null on failure.
  ///
  /// \note The file's contents must not be modified during the lifetime of the
  /// `TfLiteModel` or of any `TfLiteInterpreter` objects created from that
  /// `TfLiteModel`.
  ffi.Pointer<TfLiteModel> TfLiteModelCreateFromFile(
    ffi.Pointer<ffi.Char> model_path,
  ) {
    return _TfLiteModelCreateFromFile(model_path);
  }

  late final _TfLiteModelCreateFromFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteModel> Function(ffi.Pointer<ffi.Char>)
        >
      >('TfLiteModelCreateFromFile');
  late final _TfLiteModelCreateFromFile =
      _TfLiteModelCreateFromFilePtr.asFunction<
        ffi.Pointer<TfLiteModel> Function(ffi.Pointer<ffi.Char>)
      >();

  /// Same as `TfLiteModelCreateFromFile` with customizble error reporter.
  /// * `reporter` takes the provided `user_data` object, as well as a C-style
  /// format string and arg list (see also vprintf).
  /// * `user_data` is optional. If non-null, it is owned by the client and must
  /// remain valid for the duration of the interpreter lifetime.
  ffi.Pointer<TfLiteModel> TfLiteModelCreateFromFileWithErrorReporter(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<ffi.Char> format,
          va_list args,
        )
      >
    >
    reporter,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _TfLiteModelCreateFromFileWithErrorReporter(
      model_path,
      reporter,
      user_data,
    );
  }

  late final _TfLiteModelCreateFromFileWithErrorReporterPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteModel> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Void Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<ffi.Char> format,
                  va_list args,
                )
              >
            >,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('TfLiteModelCreateFromFileWithErrorReporter');
  late final _TfLiteModelCreateFromFileWithErrorReporter =
      _TfLiteModelCreateFromFileWithErrorReporterPtr.asFunction<
        ffi.Pointer<TfLiteModel> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Void Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<ffi.Char> format,
                va_list args,
              )
            >
          >,
          ffi.Pointer<ffi.Void>,
        )
      >();

  /// Destroys the model instance.
  ///
  /// If `model` is a null pointer, this function has no effect.
  void TfLiteModelDelete(ffi.Pointer<TfLiteModel> model) {
    return _TfLiteModelDelete(model);
  }

  late final _TfLiteModelDeletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TfLiteModel>)>>(
        'TfLiteModelDelete',
      );
  late final _TfLiteModelDelete =
      _TfLiteModelDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteModel>)
      >();

  /// Returns a new interpreter options instances.
  ffi.Pointer<TfLiteInterpreterOptions> TfLiteInterpreterOptionsCreate() {
    return _TfLiteInterpreterOptionsCreate();
  }

  late final _TfLiteInterpreterOptionsCreatePtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<TfLiteInterpreterOptions> Function()>
      >('TfLiteInterpreterOptionsCreate');
  late final _TfLiteInterpreterOptionsCreate =
      _TfLiteInterpreterOptionsCreatePtr.asFunction<
        ffi.Pointer<TfLiteInterpreterOptions> Function()
      >();

  /// Creates and returns a shallow copy of an options object.
  ///
  /// The caller is responsible for calling `TfLiteInterpreterOptionsDelete` to
  /// deallocate the object pointed to by the returned pointer.
  ffi.Pointer<TfLiteInterpreterOptions> TfLiteInterpreterOptionsCopy(
    ffi.Pointer<TfLiteInterpreterOptions> from,
  ) {
    return _TfLiteInterpreterOptionsCopy(from);
  }
